# asimov-dataset-cli

./: CHANGES.md  Cargo.toml  README.md
.cargo/: cargo.toml
.github/workflows/: release.yaml
assets/: log_vault.wasm
src/: context.rs  lib.rs  main.rs  prepare.rs  publish.rs  ui.rs
src/ui/: format.rs  mod.rs  prepare.rs  publish.rs
