# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-dataset-cli"
version = "25.0.0-dev.3"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
rust-version = "1.85"
description = "ASIMOV Dataset Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.so"
repository = "https://github.com/asimov-platform/asimov-dataset-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["text-processing"]
publish = true

[features]
default = ["all"]
all = []
unstable = ["all"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.0", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.1"

[dependencies]
borsh = "1.5.6"
clap = { version = "4.5", default-features = false }
clientele = "0.2.5"
color-eyre = "0.6.3"
color-print = "=0.3.7"
crossbeam = "0.8.4"
crossterm = { version = "0.29.0", features = ["event-stream"] }
eyre = "0.6.12"
itertools = "0.14.0"
near-api = { version = "0.5.0", default-features = false, features = ["keystore"] }
near-crypto = "0.29"
num_cpus = "^1.0"
oneshot = "0.1.11"
oxrdf = { version = "0.2.4", features = ["rdf-star"] }
oxrdfio = { version = "0.1.7", features = ["rdf-star"] }
ratatui = "0.29.0"
rdf_rs = "0.2.0"
rdf-borsh = "0.2.0"
rdf-writer = "0.2.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }

[[bin]]
name = "asimov-dataset"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "symbols"
#debug = true
