# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-dataset-cli"
version = "25.0.0-dev.4"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
rust-version = "1.85"
description = "ASIMOV Dataset Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.so"
repository = "https://github.com/asimov-platform/asimov-dataset-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["text-processing"]
publish = true

[features]
default = ["all"]
all = []
unstable = ["all"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.0", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.1"

[dependencies]
borsh = "1.5.6"
clap = { version = "4.5", default-features = false }
clientele = "0.2.5"
color-eyre = { version = "0.6.3", default-features = false }
crossbeam = "0.8.4"
derive_builder = "0.20.2"
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
indicatif = "0.17.11"
near-api = { version = "0.5.0", default-features = false, features = ["keystore"] }
near-crypto = "0.29"
num_cpus = "^1.0"
oneshot = "0.1.11"
oxrdf = { version = "0.2.4", features = ["rdf-star"] }
oxrdfio = { version = "0.1.7", features = ["rdf-star"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# TODO: remove `git =` once rdf.rs packages at 0.2.1 are published to crates.io
rdf_rs = { version = "0.2.1", git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-borsh = { version = "0.2.1", git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-writer = { version = "0.2.1", git = "https://github.com/rust-rdf/rdf.rs.git" }
tracing-indicatif = "0.3.9"

[[bin]]
name = "asimov-dataset"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "symbols"
#debug = true

# TODO: remove once rdf.rs packages at 0.2.1 are published to crates.io
[patch.crates-io]
rdf_rs =     { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-borsh =  { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-derive = { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-format = { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-model =  { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-query =  { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-reader = { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-vocab =  { git = "https://github.com/rust-rdf/rdf.rs.git" }
rdf-writer = { git = "https://github.com/rust-rdf/rdf.rs.git" }
